app-of-apps/manifests/pricelist-frontend/pricelist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pricelist-ingress
  namespace: pricelist
spec:
  ingressClassName: nginx
  rules:
    - host: pricelist.7f000001.nip.io
      http:
        paths:
          - backend:
              service:
                name: pricelist
                port:
                  number: 8080
            path: /
            pathType: Prefix
